Added reviews view

--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,4 +1,4 @@
-<h1>Share your opinion about <%= @booking.name %>!</h1>
+<h1>Share your opinion!</h1>
 
 <%= simple_form_for([@booking, @review]) do |f| %>
   <%= f.input :comment %>
