Add views for kitchens

--- a/app/views/kitchens/edit.html.erb
+++ b/app/views/kitchens/edit.html.erb
@@ -1,1 +1,7 @@
 <h1>[Edit] <%= @kitchen.name%></h1>
+
+<%= render "form", kitchen: @kitchen %>
+
+  <div>
+    <%= link_to "Back to kitchens", kitchen_path %>
+  </div>
