--- a/app/views/kitchens/show.html.erb
+++ b/app/views/kitchens/show.html.erb
@@ -1,1 +1,14 @@
 <h1><%= @kitchen.name%></h1>
+
+
+<p style="color: green"><%= notice %></p>
+
+
+
+
+<div>
+  <%= link_to "Edit this kitchen", edit_kitchen_path(@kitchen) %> |
+  <%= link_to "Back to kitchens", kitchens_path %>
+
+  <%= button_to "Destroy this kitchen", @kitchen, method: :delete %>
+</div>
