--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,1 +1,6 @@
-<h1> You are booking the <%= @kitchen.name %></h1>
+<p style="color: green"> You booked the <%= @booking.kitchen.name %></p>
+<div class="card">
+  <h3> <%=@booking.kitchen.name%></h3>
+  <p> Price: <%=@booking.kitchen.price%>€/ day </p>
+  <p> Total Price: €<%=@total_price%> </p>
+</div>
