Add kitchen view: index

--- a/app/views/kitchens/show.html.erb
+++ b/app/views/kitchens/show.html.erb
@@ -6,7 +6,7 @@
 
 
 
-<div>
+<div class="card">
   <%= link_to "Edit this kitchen", edit_kitchen_path(@kitchen) %> |
   <%= link_to "Back to kitchens", kitchens_path %>
 
