--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,9 @@
 .navbar-lewagon {
   justify-content: space-between;
-  background: white;
+  background: $secondary;
+  border-width: 80%;
+  border-radius: 50px;
+  margin: 5px 5px auto;
 }
 
 .navbar-lewagon .navbar-collapse {
@@ -9,4 +12,5 @@
 
 .navbar-lewagon .navbar-brand img {
   width: 40px;
+  border-radius: 50%;
 }
