--- a/app/views/kitchens/index.html.erb
+++ b/app/views/kitchens/index.html.erb
@@ -1,14 +1,23 @@
 <h1>Kitchens#index</h1>
 
-  <div id="kitchens">
-    <% @kitchens.each do |kitchen| %>
-    <div class="kitchen">
-        <%= render "kitchens/kitchen", kitchen: kitchen %>
+<div id="kitchens" class="row">
+  <% @kitchens.each do |kitchen| %>
+    <div class="col-md-3 mb-3">
+      <div class="card" style="width: 18rem;">
+        <img src="https://picsum.photos/200/300" class="card-img-top img-fluid" alt="Kitchen Image">
+        <div class="card-body">
+          <h5 class="card-title">
+            <%= link_to kitchen.name, kitchen, style: "color: black", class: " text-decoration-none link" %>
+          </h5>
+          <p class="card-text">
+            <%= kitchen.description %>
+          </p>
+        </div>
+      </div>
     </div>
-    <% end %>
+  <% end %>
 
-  </div>
-
-<div class="btn">
-  <%= link_to "+ New kitchen", new_kitchen_path, class:"button" %>
+  <div class="btn btn-primary">
+  <%= link_to "+ New kitchen", new_kitchen_path, class: "button white-text", style: "color: white;" %>
+</div>
 </div>
