--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,24 +1,22 @@
 <%# Route: kitchens/:id/bookings/new %>
-<h1>Bookings#new</h1>
-<p>Find me in app/views/bookings/new.html.erb</p>
+<h1>Make a booking</h1>
+<%# <p>Find me in app/views/bookings/new.html.erb</p> %>
+<div class="booking-container">
+  <div class="container">
+    <div class="d-flex justify-content-between">
+    <div>
+      <%= image_tag "logo.png" %>
+    </div>
+      <div>
+        <%= simple_form_for [@kitchen, @booking] do |form| %>
+            <%= form.input :start_date %>
+            <%= form.input :end_date %>
+            <%= form.input :message %>
+          <%= form.submit "Submit", class: "btn btn-primary" %>
+        <% end %>
 
-<%= form_with(model: @booking, url: kitchen_bookings_path(@kitchen), method: :post) do |form| %>
-  <div class="field">
-    <%= form.label :start_date %>
-    <%= form.date_field :start_date, class: "form-control" %>
+        <%= link_to "Back", kitchen_path(@kitchen), class: "btn btn-secondary" %>
+      </div>
+    </div>
   </div>
-
-  <div class="field">
-    <%= form.label :end_date %>
-    <%= form.date_field :end_date, class: "form-control" %>
-  </div>
-
-  <div class="field">
-    <%= form.label :message, "Message to Owner" %>
-    <%= form.text_area :message, class: "form-control", rows: 4 %>
-  </div>
-
-  <%= form.submit "Submit", class: "btn btn-primary" %>
-<% end %>
-
-<%= link_to "Back", kitchen_path(@kitchen), class: "btn btn-secondary" %>
+</div>
