edit booking view

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -9,7 +9,7 @@ $green: #1EDD88;
 $gray: #0E0000;
 $light-gray: #F4F4F4;
 
-$primary: #F2FFE9;
-$secondary: #A6CF98;
-$green: #557C55;
-$salmon: #FA7070;
+$very-dark: #2C3333;
+$dark: #435B66;
+$light: #A76F6F;
+$very-light: #EFE1D1;
