--- a/app/views/kitchens/_form.html.erb
+++ b/app/views/kitchens/_form.html.erb
@@ -5,5 +5,6 @@
   <%= f.input :start_date %>
   <%= f.input :end_date %>
   <%= f.input :description %>
+  <%= f.input :photo, as: :file %>
   <%= f.submit %>
 <% end %>
