index page with rating

--- a/app/views/kitchens/index.html.erb
+++ b/app/views/kitchens/index.html.erb
@@ -31,14 +31,19 @@
 <div id="kitchens" class="row">
   <% @kitchens.each do |kitchen| %>
     <div class="col-md-3 mb-3">
+
       <div class="card" style="width: 18rem;">
-      <% if kitchen.photo.attached? %>
-      <%= cl_image_tag kitchen.photo.key, height: 300, width: 400, class: "card-img-top img-fluid", crop: :fill %>
-      <% else %>
-      <img src="https://picsum.photos/200/300" class="card-img-top img-fluid" alt="Kitchen Image">
-      <% end %>
+        <% if kitchen.photo.attached? %>
+          <%= cl_image_tag kitchen.photo.key, height: 300, width: 400, class: "card-img-top img-fluid", crop: :fill %>
+        <% else %>
+          <img src="https://picsum.photos/200/300" class="card-img-top img-fluid" alt="Kitchen Image">
+        <% end %>
+
         <div class="card-body">
-            <p id="price">€<%= kitchen.price%>/ day</p>
+          <div class="price-rating">
+            <p> <%= "★" * kitchen.average_rating.to_i %> </p>
+            <p id="price">€<%= kitchen.price%>/ day </p>
+          </div>
           <h5 class="card-title">
             <%= link_to kitchen.name, kitchen, style: "color: black", class: "text-decoration-none" %>
           </h5>
