--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -11,17 +11,27 @@
 
 .card-title {
   font-weight: 700 !important;
-  margin-left: 10px;
+  margin-left: 5px;
 }
 
 .card-body {
   padding: 10px !important;
 }
 
+.card-text{
+  margin-left: 5px;
+}
+
 #price {
   font-size: 15px;
   font-weight: 700;
   text-align: right;
+}
+
+.price-rating{
+  margin-left: 5px;
+  display: flex;
+  justify-content: space-between;
 }
 
 .card-img-top {
