--- a/app/views/kitchens/index.html.erb
+++ b/app/views/kitchens/index.html.erb
@@ -1,29 +1,31 @@
 <%# Categories %>
 <div class="categories col-6">
   <%# Category 1 %>
-  <div class="category">
-    <img class="category_pic" src="<%= asset_url("backen.png")%>">
-    <p class="category_name">Food Preparation</p>
-  </div>
+  <%= link_to root_path(query: "food_prep") do  %>
+    <div class="category">
+      <img class="category_pic" src="<%= asset_url("backen.png")%>">
+      <p class="category_name link">Food Preparation</p>
+    </div>
+  <% end %>
   <%# Category 2 %>
   <div class="category">
     <img class="category_pic" src="<%= asset_url("gerat.png")%>">
-    <p class="category_name">Cooking Appliances</p>
+    <p class="category_name link">Cooking Appliances</p>
   </div>
   <%# Category 3 %>
   <div class="category">
     <img class="category_pic" src="<%= asset_url("grill.png")%>">
-    <p class="category_name">Outdoor Cooking</p>
+    <p class="category_name link">Outdoor Cooking</p>
   </div>
   <%# Category 4 %>
   <div class="category">
     <img class="category_pic" src="<%= asset_url("grill.png")%>">
-    <p class="category_name">Outdoor Cooking</p>
+    <p class="category_name link">Beverage Appliances</p>
   </div>
   <%# Category 5 %>
   <div class="category">
     <img class="category_pic" src="<%= asset_url("grill.png")%>">
-    <p class="category_name">Outdoor Cooking</p>
+    <p class="category_name link">Specialty Appliances</p>
   </div>
 </div>
 
@@ -50,3 +52,7 @@
     </div>
   <% end %>
 </div>
+
+<%= link_to "Food Preperation", root_path(query: "food_prep")  %>
+<%= link_to "Cooking Appliances", root_path(query: "food_prep")  %>
+<%= link_to "Outdoor Cooking", root_path(query: "outdoor")  %>
