--- a/app/views/kitchens/show.html.erb
+++ b/app/views/kitchens/show.html.erb
@@ -3,79 +3,67 @@
 
 <%= link_to "← go back", kitchens_path, class:"link" %>
 
-<h1>Make a booking</h1>
-<%# <p>Find me in app/views/bookings/new.html.erb</p> %>
-<div class="border">
-  <div class="d-flex justify-content-around">
+<%# Kitchen Info %>
 
-  <div class="kitchen-container">
-    <div class="item-container">
-      <div class="info-container">
-        <%= image_tag "logo.png" %>
-        <div>
-          <h3><%= @kitchen.name %></h3>
-          <p>Rating: ⭐️ /5</p>
-          <ul>
-            <li>detail 1</li>
-            <li>detail 2</li>
-          </ul>
-        </div>
+
+<%# <p>Find me in app/views/bookings/new.html.erb</p> %>
+
+<div class="d-flex justify-content-around">
+  <div class="item-container">
+    <div class="info-container">
+      <%= cl_image_tag @kitchen.photo.key%>
+      <div>
+        <h3 class="card-title"><%= @kitchen.name %></h3>
+        <p class="item-body">
+          Rating: ★<%= @total_rating %>/5
+        </p>
+        <p class="item-body">
+          Details: <%= @kitchen.description%>
+        </p>
       </div>
     </div>
-      <div class="owner-card">
-        <%= image_tag "logo.png" %>
-        <div>
-          <p>Owner Name</p>
-          <p>
+    <div class="divider"></div>
+    <div class="owner-card">
+      <%= image_tag "logo.png" %>
+      <div>
+        <p>
+          The owner of this kitchen is <%= @kitchen.user.email%>
+        </p>
+        <p>
+        </p>
+       </div>
+    </div>
 
-          </p>
-        </div>
-      </div>
-  </div>
 
-  <div class="booking-container">
+    <div class="booking-container">
       <div>
         <%= simple_form_for [@kitchen, @booking] do |form| %>
-            <%= form.input :start_date %>
-            <%= form.input :end_date %>
-            <%= form.input :message %>
-          <%= form.submit "Rent Now", class: "btn btn-primary" %>
+          <%= form.input :start_date %>
+          <%= form.input :end_date %>
+          <%= form.input :message %>
+          <%= form.submit "Rent Now", id:"rent_bnt", class:"btn button" %>
         <% end %>
-
         <%# <%= link_to "Go Back To Overview", kitchen_path(@kitchen), class: "btn btn-secondary" %>
       </div>
     </div>
+    <div class="reviews-container">
+      <h1 class="card-title">
+        Reviews
+      </h1>
+        <div class="review-content" >
+        <%@kitchen.reviews.each do |review| %>
+          <p class="rating">
+            ★<%= review.rating %>/5
+          </p>
+          <p class="content">
+          <%= review.content%>
+          </p>
+        <%end%>
+        </div>
+    </div>
   </div>
-
 </div>
 
-<%# Kitchen Info %>
-<div class="card">
-  <h1 class="card-title">
-    <%= @kitchen.name%>
-  </h1>
-  <p class="card-body">
-    <%=@kitchen.description %>
-    €<%= @kitchen.price%>/day
-  </p>
-    <%# <%= @kitchen.pic %>
-</div>
 
-<%= link_to "Rent Now", new_kitchen_booking_path(@kitchen), id:"rent_bnt", class:"btn button" %>
 
 <%# Reviews %>
-<div class="card">
-  <h1 class="card-title">
-    Reviews
-  </h1>
-  <p class="card-body">
-    <%@kitchen.reviews.each do |review| %>
-    <div>
-      <%= review.content %>
-      <%= review.rating %>
-    <%end%>
-    </div>
-  </p>
-</div>
-
-
