--- a/app/views/kitchens/show.html.erb
+++ b/app/views/kitchens/show.html.erb
@@ -27,7 +27,7 @@
       <%= image_tag "logo.png" %>
       <div>
         <p>
-          The owner of this kitchen is <%= @kitchen.user.email%>
+          The owner of this kitchen is <%= @kitchen.user.first_name%>
         </p>
         <p>
         </p>
