--- a/app/assets/stylesheets/components/_category.scss
+++ b/app/assets/stylesheets/components/_category.scss
@@ -4,6 +4,8 @@
   justify-content: space-between;
   width: 100%;
   text-align: center;
+  margin-bottom: 10px;
+  margin-top: 20px;
 }
 
 .category {
