--- a/app/views/kitchens/index.html.erb
+++ b/app/views/kitchens/index.html.erb
@@ -1,7 +1,7 @@
 <%# Categories %>
 <div class="categories col-6">
   <%# Category 1 %>
-  <%= link_to root_path(query: "food_prep") do  %>
+  <%= link_to root_path(query: "food_prep"), class:"link" do  %>
     <div class="category">
       <img class="category_pic" src="<%= asset_url("backen.png")%>">
       <p class="category_name link">Food Preparation</p>
