Commit 3: Edit Login Page

--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,6 +1,6 @@
-<p style="color: green"> You booked the <%= @booking.kitchen.name %></p>
-
 <%= link_to "← go back", kitchens_path, class:"link" %>
+
+<p style="margin-top: 50px;color: green"> You booked the <%= @booking.kitchen.name %></p>
 
   <div class="background">
     <div class="new-container">
