--- a/app/assets/stylesheets/pages/_booking_new.scss
+++ b/app/assets/stylesheets/pages/_booking_new.scss
@@ -74,6 +74,7 @@ h3 {
   border-radius: 15px;
   padding: 20px;
   box-shadow: rgba(0, 0, 0, 0.12) 0px 6px 6px;
+  margin-top: 50px;
   margin-bottom: 20px;
   margin: 10px;
 }
