Commit 4: Add missing icons

--- a/app/views/kitchens/index.html.erb
+++ b/app/views/kitchens/index.html.erb
@@ -19,12 +19,12 @@
   </div>
   <%# Category 4 %>
   <div class="category">
-    <img class="category_pic" src="<%= asset_url("grill.png")%>">
+    <img class="category_pic" src="<%= asset_url("getrank.png")%>">
     <p class="category_name link">Beverage Appliances</p>
   </div>
   <%# Category 5 %>
   <div class="category">
-    <img class="category_pic" src="<%= asset_url("grill.png")%>">
+    <img class="category_pic" src="<%= asset_url("staubsauger.png")%>">
     <p class="category_name link">Specialty Appliances</p>
   </div>
 </div>
