--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,8 +4,10 @@
   <%= f.error_notification %>
 
   <div class="form-inputs">
-    <%= f.input :first_name %>
-    <%= f.input :last_name %>
+    <%= f.input :first_name,
+      required: true %>
+    <%= f.input :last_name,
+      required: true %>
     <%= f.input :email,
                 required: true,
                 autofocus: true,
@@ -17,6 +19,9 @@
     <%= f.input :password_confirmation,
                 required: true,
                 input_html: { autocomplete: "new-password" } %>
+                <%= f.input :photo,
+                required: true,
+                as: :file %>
   </div>
 
   <div class="form-actions">
