--- a/app/views/kitchens/show.html.erb
+++ b/app/views/kitchens/show.html.erb
@@ -24,10 +24,10 @@
     </div>
     <div class="divider"></div>
     <div class="owner-card">
-      <%= image_tag "logo.png" %>
+      <%= cl_image_tag @kitchen.user.photo.key, height: 300, width: 400, class: "card-img-top img-fluid", crop: :fill %>
       <div>
         <p>
-          The owner of this kitchen is <%= @kitchen.user.first_name%>
+          The owner of this kitchen is <%= @kitchen.user.first_name %>
         </p>
         <p>
         </p>
