random commit stuff

--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,1 +1,13 @@
-<h1>hey there <%= current_user.email %></h1>
+<%= link_to "← go back", kitchens_path, class:"link" %>
+
+<h1>hey there <%= current_user.first_name.downcase %> 🧑‍🍳</h1>
+
+<div class="container">
+  <div class="current-container">
+
+  </div>
+
+  <div class="items-container">
+
+  </div>
+</div>
