--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,13 +1,11 @@
 <%= link_to "← go back", kitchens_path, class:"link" %>
 
-<h1>hey there <%= current_user.first_name.downcase %> 🧑‍🍳</h1>
 
-<div class="container">
+<div class="background">
+  <h1>hey there <%= current_user.first_name.downcase %> 🧑‍🍳</h1>
   <div class="current-container">
-
   </div>
 
   <div class="items-container">
-
   </div>
 </div>
