--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -10,6 +10,7 @@
 
 .nav-link{
   color: white;
+  font-family: 'Libre Baskerville', serif;
 }
 
 .nav-link:hover{
@@ -22,10 +23,6 @@
 }
 
 .navbar-lewagon .navbar-brand img {
-  width: 40px;
-  border-radius: 50%;
-}
-
-.nav-img {
+  width: 130px;
   border-radius: 50%;
 }
