--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -7,12 +7,14 @@
     <%= cl_image_tag @kitchen.photo.key%>
       <div class="text-container">
         <h3> <%=@booking.kitchen.name%></h3>
-        <%# price per day %>
-        <p> Price: <%=@booking.kitchen.price%>€/ day </p>
-        <%# total-price %>
-        <p> Total Price: €<%=@total_price%> </p>
+        <%# Price per Day %>
+        <p class="details" > Price: <%=@booking.kitchen.price%>€ x <%= @days %> days  </p>
+        <%# Booking Duration %>
+        <%# <% <p class="details" > Duration: <%= @days </p> %>
+        <%# Total Price %>
+        <p class="details" > Total Price: €<%= @total_price %> </p>
       </div>
     </div>
   </div>
 
-<%= link_to "Leave a review", new_booking_review_path(@booking), class: "btn btn-secondary" %>
+<%= link_to "Leave a review", new_booking_review_path(@booking), class: "button link" %>
