--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,4 +1,5 @@
 .card {
+  background-color: #0080801f;
   border: 1px solid;
   border-color: $very-light;
   border-radius: 15px !important;
@@ -6,11 +7,13 @@
   display: flex;
   margin: 10px;
   width: 100%;
+  height: 380px;
   margin-top: 5px;
+  font-family: 'Libre Baskerville', serif;
 }
 
 .card-title {
-  font-weight: 700 !important;
+  font-family: 'DM Serif Display', serif;
   margin-left: 5px;
 }
 
