--- a/app/assets/stylesheets/pages/_booking_show.scss
+++ b/app/assets/stylesheets/pages/_booking_show.scss
@@ -1,17 +1,20 @@
-
-
 .new-container{
+  background-color: #0080801f;
   border-radius: 20px;
-  margin-bottom: 50px;
-  padding: 20px;
+  margin-bottom: 30px;
+  padding: 10px;
   width: 40%;
   display: flex;
   justify-content: left;
   align-items: flex-start;
-  background-color: #EFE1D1;
+
   img{
     margin-right: 20px;
     border-radius: 12px;
     width: 140px;
+  }
+
+  h3{
+    font-family: 'DM Serif Display', serif;
   }
 }
