--- a/app/assets/stylesheets/pages/_login.scss
+++ b/app/assets/stylesheets/pages/_login.scss
@@ -1,7 +1,8 @@
 .container {
-  margin-top: 40px;
-  h2 {
-    font-weight: 700;
+  margin-top: 20px;
+
+  h1 {
+    font-family: 'DM Serif Display', serif;
   }
 }
 
