--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,8 +1,7 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
   <div class="container-fluid">
     <%= link_to kitchens_path, class: "navbar-brand" do %>
-      <img src="/home/lewagonemma/code/EMM4pr/kitchenaid/kitchenaid/app/assets/images/Screenshot 2023-11-24 121126.png" class="nav-img">
-      <%= image_tag "" %>
+      <img src="<%= asset_url("Bild1.png")%>">
     <% end %>
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -13,7 +12,7 @@
       <ul class="navbar-nav me-auto">
         <% if user_signed_in? %>
           <li class="nav-item">
-            <%= link_to "Messages", "#", class: "nav-link" %>
+<%#             <%= link_to "Messages", "#", class: "nav-link" %>
           </li>
 
           <%# Profile %>
@@ -28,7 +27,7 @@
               <%= link_to "Add new kitchen", new_kitchen_path, class: "dropdown-item" %>
 
               <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
-              
+
             </div>
           </li>
         <% else %>
