--- a/app/assets/stylesheets/pages/_booking_new.scss
+++ b/app/assets/stylesheets/pages/_booking_new.scss
@@ -70,6 +70,10 @@ h3 {
   display: flex;
   // justify-content: space-around;
   align-items: flex-start;
+  img{
+    height: 110px;
+    width: 170px;
+  }
 }
 
 .booking-container{
