--- a/app/views/kitchens/index.html.erb
+++ b/app/views/kitchens/index.html.erb
@@ -44,7 +44,7 @@
 
       <div class="card" style="width: 18rem;">
         <% if kitchen.photo.attached? %>
-          <%= cl_image_tag kitchen.photo.key, height: 300, width: 400, class: "card-img-top img-fluid", crop: :fill %>
+          <%= cl_image_tag kitchen.photo.key, class: "card-img-top img-fluid object-fit: cover;", crop: :fill %>
         <% else %>
           <img src="https://picsum.photos/200/300" class="card-img-top img-fluid" alt="Kitchen Image">
         <% end %>
