--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -1,5 +1,28 @@
 .background {
-  background-color: #EFE1D1;
-  height: 20px;
   width: 100%;
+  display: flex;
+  justify-content: space-around;
+  border-radius: 20px;
+  padding: 20px;
+  background-color: #EFE1D1;
+}
+
+.current-container {
+  border: 2px solid black;
+  padding: 10px;
+  margin: 10px;
+  border-radius: 20px;
+}
+
+
+.items-container{
+  border-radius: 20px;
+  padding: 20px;
+  margin: 10px;
+  border: 2px solid black;
+}
+
+#kitchen-name{
+  margin-top: 8px;
+  margin-left: 8px;
 }
