--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -11,8 +11,11 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto">
         <% if user_signed_in? %>
-          <li class="nav-item">
-
+          <li class="nav-item d-flex mx-auto mr-3">
+            <form class="d-flex" style="margin-right: 60px;">
+              <input class="form-control me-2 rounded-pill" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-success rounded-pill" type="submit"> Search </button>
+            </form>
           </li>
 
           <%# Profile %>
