--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -12,9 +12,9 @@
       <ul class="navbar-nav me-auto">
         <% if user_signed_in? %>
           <li class="nav-item d-flex mx-auto mr-3">
-            <form class="d-flex" style="margin-right: 60px;">
-              <input class="form-control me-2 rounded-pill" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success rounded-pill" type="submit"> Search </button>
+            <form class="d-flex" style="height: 33px;margin-right: 60px;align-items: start;">
+              <input class="form-control me-2 rounded-pill" type="search" placeholder="Search" aria-label="Search" style="background-color: #F6E6E4; border-color: transparent;">
+              <button class="btn btn-outline-success rounded-pill" type="submit" style="color: #F6E6E4; border-color: #F6E6E4;"> Search </button>
             </form>
           </li>
 
