--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,59 +1,75 @@
 <div class="content">
   <%= link_to "← go back", kitchens_path, class:"link" %>
 
-    <h1>Hi, <%= current_user.first_name.downcase %> </h1>
+  <h1> Hi, <%= current_user.first_name.capitalize %> </h1>
 
   <div class="background">
-    <div class="bookings_conainer">
-      <h4>Your current bookings</h4>
-      <% @bookings.each do |booking| %>
-        <div class="current-container">
-          <div class="d-flex align-items-center">
-            <%= cl_image_tag booking.kitchen.photo.key, width: 60, height: 60 %>
-            <p id="kitchen-name">
-              <%= booking.kitchen.name %>
-            </p>
-          </div>
-          <div>
-            <p>
-              <%= booking.kitchen.description %>
-            </p>
-          </div>
-          <div class="days_left">
-            You have
-             <%= booking.calculate_days_left %>
-            days left
-          </div>
-        </div>
-        <%= button_to "Destroy this kitchen", @kitchen, method: :delete %>
-      <%end%>
+
+    <div class="current_conainer">
+      <h4> Your current bookings </h4>
+      <table class="kitchen-table">
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th>Description</th>
+            <th>Booking Validity</th>
+          </tr>
+        </thead>
+
+        <tbody>
+          <% @bookings[3..].each do |booking| %>
+            <tr>
+              <td>
+                  <p id="kitchen-name">
+                    <%= booking.kitchen.name %>
+                  </p>
+              </td>
+              <td>
+                <p>
+                  <%= booking.kitchen.description %>
+                </p>
+              </td>
+              <td>
+                <% if booking.calculate_days_left.positive? %>
+                  <div class="days_left">
+                    <%= booking.calculate_days_left %> days left
+                  </div>
+                <% else %>
+                  <div class="days_left">
+                    This booking has ended
+                  </div>
+                <% end %>
+              </td>
+
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
     </div>
 
-    <div class="items_container">
-  <h4>Your own kitchen appliances</h4>
-
-  <table class="kitchen-table">
-    <thead>
-      <tr>
-        <th>Name</th>
-        <th>Description</th>
-        <th>Reviews</th>
-        <th>Edit</th>
-      </tr>
-    </thead>
-    <tbody>
-      <% @kitchens.each do |kitchen| %>
-        <tr>
-          <td><%= kitchen.name %></td>
-          <td><%= kitchen.description %></td>
-          <td><%= kitchen.average_rating %></td>
-          <td><%= link_to "✎", edit_kitchen_path(kitchen), class: "link" %></td>
-        </tr>
-      <% end %>
-    </tbody>
-  </table>
-</div>
-
+    <div class="current_conainer">
+      <h4>Your own kitchen appliances</h4>
+      <table class="kitchen-table">
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th>Description</th>
+            <th>Reviews</th>
+            <th>Edit</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @kitchens.each do |kitchen| %>
+            <tr>
+              <td><%= kitchen.name %></td>
+              <td><%= kitchen.description %></td>
+              <td><%= kitchen.average_rating %></td>
+              <td><%= link_to "✎", edit_kitchen_path(kitchen), class: "link" %></td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
 
   </div>
 </div>
