--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -17,7 +17,7 @@
         </thead>
 
         <tbody>
-          <% @bookings[3..].each do |booking| %>
+          <% @bookings.each do |booking| %>
             <tr>
               <td>
                   <p id="kitchen-name">
